--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "buble src -o lib",
     "lint": "fecs ./ --rule --type 'vue,js,css'",
     "prepublish": "npm run build",
-    "test": "npm run build && nyc ava"
+    "test": "npm run build && nyc ava",
+    "test:5": "ava ./test/webpack5.test.js"
   },
   "dependencies": {
     "loader-utils": "^1.1.0",
@@ -34,7 +35,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "fecs": "^1.4.0",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "memory-fs": "^0.4.1",
     "mini-css-extract-plugin": "^0.4.0",
     "multipage-webpack-plugin": "^0.4.0",
@@ -47,11 +48,11 @@
     "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^3.0.0",
+    "webpack": "^5.0.0",
     "webpack-merge": "^4.1.0"
   },
   "peerDependencies": {
-    "webpack": "^3.0.0 || ^4.0.0"
+    "webpack": "^5.0.0"
   },
   "engines": {
     "node": ">=6.9"
